--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -86,7 +86,7 @@ set of conformance classes that define tests for all requirements of a standard 
 The conformance suite is the union of all conformance classes. It is by definition the
 conformance class of the entire standard or abstract specification.
 
-In theModSpec, each {{requirement}} is mandatory within its conformance class and each {{requirement}} is tested in at least one {{conformance test}}.
+In the ModSpec, each {{requirement}} is mandatory within its conformance class and each {{requirement}} is tested in at least one {{conformance test}}.
 ====
 
 === core requirements class
@@ -97,7 +97,7 @@ standard
 
 [NOTE]
 ====
-The core {{requirements class}} is unique because if it were possible to have
+The core requirements class is unique because if it were possible to have
 more than one, then each *core* would have to be implemented to pass any
 {{conformance test class}}, and thus would have to be contained in any other
 *core*. The *core* may be empty, or all or part of another standard or related
@@ -120,8 +120,7 @@ A direct dependency (of a requirements class) of the current {{requirements clas
 requirements class extends, or uses all the aspects of the direct dependency (of a requirements class).
 Any tests associated with this direct dependency (of a requirements class) can be applied to this requirements class.
 
-When testing a
-direct dependency of a requirements class, the {{standardization target}} is directly subject to the test in the specified
+When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified
 {{conformance test class}} of the direct dependency of a requirements class.
 ====
 
@@ -134,14 +133,14 @@ implementation of this {{requirements class}}
 [NOTE]
 ====
 In this instance, as opposed to the
-direct dependency of a requirements class), the test against the consumable or product used
+direct dependency of a requirements class, the test against the consumable or product used
 or produced by the {{requirements class}} does not directly test the
-{{requirements class}}, but tests only its side effects. Hence, a particular
+requirements class, but tests only its side effects. Hence, a particular
 type of feature service could be required to produce valid XML documents, but
 the test of validity for the XML document is not directly testing the service,
 but only indirectly testing the validity of its output.
 Direct dependencies test the same {{standardization target}}, but
-indirect dependencies}} test related but different {{standardization target,standardization targets}}.
+indirect dependencies}} test related but different standardization target,standardization targets.
 
 For example, if a DRM-enabled service is required
 to have an association to a licensing service, then the requirements of a
@@ -152,11 +151,10 @@ requirement may be stated as the associated licensing service has a
 
 === extension (of a requirements class)
 
-{{requirements class}} which has a direct dependency}} on another {{requirements class}}
+{{requirements class}} which has a direct dependency on another requirements class
 
-NOTE: Here an extension of a requirements class is defined on {{requirements class}} so that their implementation may be
-software extensions in a manner analogous to the extension relation between the
-{{requirements class,requirements classes}}.
+NOTE: Here an extension of a requirements class is defined on requirements class so that their implementation may be
+software extensions in a manner analogous to the extension relation between the requirements classes.
 
 === general recommendation
 
@@ -234,7 +232,7 @@ course of action is deprecated but not prohibited
 
 NOTE: Although using normative language, a recommendation is not
 a {{requirement}}. The usual form replaces the "shall" (imperative or
-command) of a {{requirement}} with a "should" (suggestive or
+command) of a requirement with a "should" (suggestive or
 conditional).
 
 NOTE: Recommendations are *not* tested and therefor have no related conformance test.
@@ -310,8 +308,8 @@ document that has been approved by a legitimate Standards Body
 [NOTE]
 ====
 This definition is included for completeness. {{standard,Standard}} and
-{{specification}} can apply to the same document. While {{specification}} is
-always valid, {{standard}} only applies after the adoption of the document by a
+{{specification}} can apply to the same document. While specification is
+always valid, standard only applies after the adoption of the document by a
 legitimate standards organization.
 ====
 
@@ -319,7 +317,7 @@ legitimate standards organization.
 
 entity to which some {{requirement,requirements}} of a {{standard}} apply
 
-NOTE: The {{standardization target}} is the entity which may receive a
+NOTE: The standardization target is the entity which may receive a
 {{certificate of conformance}} for a {{requirements class}}.
 
 === standardization target type
