--- a/sources/ogc-modspec-policy/06-policy.adoc
+++ b/sources/ogc-modspec-policy/06-policy.adoc
@@ -1,14 +1,14 @@
 [[modspec-policy]]
 == ModSpec Policy Requirements
 
-The following requirement states that in OGC Standards development, the ModSpec model will be used.
+The following states that for any OGC Standards development, the ModSpec model will be used.
 
 [[req-01]]
 [requirement,model=ogc,type="general"]
 [width="90%",cols="2,6"]
 |===
 |*REQ001* | */req/policy/conformance-with-modspec* +
-Any new OGC Standard, abstract specification that contains requirements, or major revision of an existing OGC Standard _SHALL_ comply with the requirements stated in the OGC ModSpec.
+Any new OGC Standard, abstract specification containing requirements, or major revision of an existing OGC Standard _SHALL_ comply with the requirements stated in the OGC ModSpec.
 |===
 
 Any OGC Standards document must specify a standardization goal.
