--- a/sources/requirements/core/REQ_extensions-conformant-to-modspec.adoc
+++ b/sources/requirements/core/REQ_extensions-conformant-to-modspec.adoc
@@ -4,5 +4,5 @@
 ====
 [%metadata]
 identifier:: /req/core/extensions-conformant-to-the-modspec
-part:: A standard conformant to the ModSpec SHALL require all conformant extensions to itself to be conformant to the ModSpec.
+part:: A standard conformant to the ModSpec SHALL require all conformant extensions to be conformant to the ModSpec.
 ====
