--- a/sources/requirements/core/REQ_standardization-goal.adoc
+++ b/sources/requirements/core/REQ_standardization-goal.adoc
@@ -1,8 +1,8 @@
-[[req_class_a_name_1]]
+[[req_standardization-goal]]
 
 [requirement]
 ====
 [%metadata]
-identifier:: /req/req-class-a/req-name-1
-part:: Requirement 'shall' statement
+identifier:: /req/core/standardization-goal
+part:: A standard SHALL state the goal of this standardization effort.
 ====
