--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -235,7 +235,7 @@ a {{requirement}}. The usual form replaces the "shall" (imperative or
 command) of a requirement with a "should" (suggestive or
 conditional).
 
-NOTE: Recommendations are *not* tested and therefor have no related conformance test.
+NOTE: Recommendations are *not* tested and therefore have no related conformance test.
 
 [.source]
 <<iso-dp2>>
