--- a/sources/sections/01-scope.adoc
+++ b/sources/sections/01-scope.adoc
@@ -14,12 +14,12 @@ interoperability. The ultimate goal of this approach is to enable interoperable 
 
 Therefore, a standard that follows the rules specified in the ModSpec presents requirements organized in requirements classes which must be satisfied by passing the tests defined in a conformance suite (also known as the Abstract Test Suite in an OGC Standard). These tests are organized into conformance classes, each of which represents a mechanism for partial satisfaction of the standard. This results in a standard having a modular structure, where each requirements class has a corresponding conformance (test) class. In a well written standard, the normative clauses and any model or schema are organized in a manner that parallels the requirements and conformance clauses. A goal of the design pattern is the ability to define requirements classes and associated conformance classes that can be used across multiple standards. The approach modelled in the ModSpec has been referred to as the "core and extension model" due to its insistence on a modular structure throughout all parts of a standard and its implementation.
 
-There are numerous examples of requirements/conformance classes that can be used not only in OGC Standards, but for geospatially focused standards defined by other organizations and Standards Development Organizations (SDOs). Some OGC examples can be found in the https://docs.ogc.org/is/19-072/19-072.html[OGC API - Common Part 1: Core Standard] and in the https://github.com/opengeospatial/cdbswg/blob/master/cdb-2.0/cdb-core-crs-requirements-class.adoc[CDB 2.0 Standard CRS Requirements Module]. By formally implementing the requirements specified in the ModSpec, reusable, testable, modular standards can be developed.
+There are numerous examples of requirements/conformance classes that can be used not only in OGC Standards, but for geospatially focused standards defined by other organizations and Standards Development Organizations (SDOs). Some OGC examples can be found in the https://docs.ogc.org/is/19-072/19-072.html[OGC API - Common Part 1: Core Standard] and in the https://github.com/opengeospatial/cdbswg/blob/master/cdb-2.0/23-034/sections/cdb-core-crs-requirements-module.adoc[CDB 2.0 Standard CRS Requirements Module]. By formally implementing the requirements specified in the ModSpec, reusable, testable, modular standards can be developed.
 
 [[things-to-know]]
 === Understanding the ModSpec
 
-Reading the Terms and Definitions clause and Clause <<Terms and Definitions, cls-4>> will help understanding the content and
+Reading the Terms and Definitions clause and Clause <<cls-4,Terms and Definitions>> will help understanding the content and
 requirements stated in this document.
 
 <<Annex C,annex-C>> defines the UML model upon which the ModSpec is
